--- a/從良知而行.md
+++ b/從良知而行.md
@@ -6,9 +6,13 @@
 
 我剛開始講話，就有了三次鼓掌，漯河的朋友是這麽熱情？（鼓掌）如果我以後要移民——因爲聽說臺灣已經不適合人居住——我一定移民到漯河來。（鼓掌）大家不要太高興，我到每個地方都這樣講（众笑），不過我今天講的是真的（鼓掌），雖然以前每一次講的也都是真的（众笑），因爲我最喜歡的就是人與人之間這樣的和諧，這麽相親相愛、互相關懷，從剛才各位的掌聲我就可以發現，今天我們的演講一定非常成功。（鼓掌）演講的成功不全是因爲我會講，而是因爲各位也要會聽，或許不一定真的會聽，至少表面上會鼓掌（众笑），這樣一方面讓我心裏高興，另一方面我也覺得責任重大，我一定要好好講，努力講，認真講，我要講出我最好的獻給各位！（鼓掌）
 
+### 开题
+
 不過，今天所定的題目有一點問題，這個題目不是我定的，是別人幫我定的，讓我來講什麼「傳統文化和美德建設」。這個題目可能讓一些人不想來聽，所以今天只來了七八百人，如果題目換一換，可能會來七八千人。這個題目太形式了，太硬了，帶點迂腐，帶點封建。因為這個題意好像是説「我們應該弘揚傳統文化來培養自己的美德」，或者「培養美德來代表我對傳統文化弘揚政策的支持。」雖然這樣也沒有錯，但還不是很精到。怎麽樣才算精到呢？須知：美德教育，培養一個人的美德，本身即是目的；培養美德不是為了要弘揚傳統文化，更不是為了要配合政府政策。要有美德很簡單，就是：「你應該怎麽做人就怎麽做人，你就是一個有德的人。」
 
 這句話很經典，我再説一遍，「你應該怎麽做人就怎麽做人，你就是一個有德的人。」（停頓）聽到經典的語言，應該鼓掌。（笑，鼓掌）而一個文化之所以稱爲文化，傳統之所以稱爲傳統，尤其是中國的文化傳統之所以源遠流長，就是因爲他本來就教我們應該怎麽做人，所以我們要做一個有德的人，不一定是要繼承傳統文化，不一定是要發揚傳統文化，而乃是我們傳統文化本來就是一個有德的文化，而這個所謂有德的文化也沒有特別的地方，就是它教我們知道應該怎麼做，鼓舞我們這樣做去。所以這個題目最後也並沒有錯，也很精當。
+
+## 有德
 
 那我們怎麽做，才算「應該」，怎麼做才是有德呢？有德無德誰來判斷呢？是不是遵照中國的傳統文化來做就是一個有德者，如果遵照西方文化或者印度文化來做，是否就不算一個有德者呢？所以在這裏，我們首先要探討一個問題，什麽叫做有德，如果我們不能判斷什麽是有德，你怎麽知道自己這樣做是有德，那樣做是無德，又怎麽判斷別人哪樣做是有德，那你又憑什麼去修養，使自己有德？又應以什麼態度來面對自己的文化傳統？我們今天先從「判斷有德無德的標準」談起。
 
@@ -24,15 +28,17 @@
 
 在這裏，道是天理，是客觀的，道是絕對的。依照絕對而客觀的天理而行，謂之「行道」，德者得也，如果行道而有所得，那麽就是有德的人。所以道德不是古聖先賢規定的，道德不是老師教的，也不是父母希望的，道德是如果他想成爲一個真正的人，就必須依照「天道之所命」「人性之本然」而走他的人生之路。如果不行道，沒有德，我們就可以説他違背天理，沒有盡到人生的本性，他就不能成為一個「人」。所以，道德是爲自己的本份而做的，孔子所謂「古之學者爲己，今之學者爲人」。
 
-古之學者」意思就是理想中的學生、理想中的君子，是爲了自己生命內在的本性而做而學而成；「今之學者」是指現在受教育的人，他不是爲了自己生命的本性而做人，而是爲了別人看，比如迎合師長的要求，迎合父母的期待，迎合社會的規範，想著別人一直在看着我，我就要做給他們看，這叫做「爲人」。
+「古之學者」意思就是理想中的學生、理想中的君子，是爲了自己生命內在的本性而做而學而成；「今之學者」是指現在受教育的人，他不是爲了自己生命的本性而做人，而是爲了別人看，比如迎合師長的要求，迎合父母的期待，迎合社會的規範，想著別人一直在看着我，我就要做給他們看，這叫做「爲人」。
 
 所以「道德」本來並不可怕，道德也不是來規範你，限制你，道德是讓你的生命順其本性很自由的自然的開展。假如你不能够認識道德的這種意義，那麽一旦想成爲有德的人，每個人都好像擔了千斤重量一樣，而且覺得綁手綁腳，只爲做個好樣子給人家看，像這樣子瞭解道德是錯誤的。所以剛才我才説，我們要做一個有德的人，或者我們要弘揚中國文化，其實只有一個要點，就是我們按照本性，應該怎麽做，我們就怎麽做！（鼓掌）
 
-依照中庸所說「天命之謂性，率性之謂道」，如果我們遵照天性而行，就是我有德了。如此看來，要做一個有德者，豈不是很簡單麼？不過，這樣講，表面像是簡單了，其實其中還是有不很透澈的地方。因為，我們的本性何在，我應該怎麼做？我能够真切的知道麼？我們的本性既來自天命，則我們必須了解「天道天德」，才能了悟人的本性，而天道高遠，天命渺茫，如何了悟？不瞭解天道天命天性天德，你怎麽走出你的人德呢？於是道德就變得非常困難，或者就可以因為猜想的錯誤，而走向不道德。大家知道西方有一位教主叫耶穌，有一次，他的門徒忍不住問一個難題，説：「老師，你天天要我們信上帝，到底上帝在哪里？我們都沒有看見上帝，你怎麽叫我們信？」這和剛才說中庸要我們要從人的天性而行，而這個天性是天之所命，如果我們都不瞭解老天，怎么知道老天命給我們的是什麽呢？問題的意思差不多。所以這個問題很難回答，必須要很高的智慧才能解破這個難關——如果是你，你能回答嗎？耶穌果然了不起，有智慧，他答道：，「你天天和我在一起，你還沒有看到上帝嗎？」（鼓掌）
+依照中庸所說「天命之謂性，率性之謂道」，如果我們遵照天性而行，就是我有德了。如此看來，要做一個有德者，豈不是很簡單麼？不過，這樣講，表面像是簡單了，其實其中還是有不很透澈的地方。因為，我們的本性何在，我應該怎麼做？我能够真切的知道麼？我們的本性既來自天命，則我們必須了解「天道天德」，才能了悟人的本性，而天道高遠，天命渺茫，如何了悟？不瞭解天道天命天性天德，你怎麽走出你的人德呢？於是道德就變得非常困難，或者就可以因為猜想的錯誤，而走向不道德。大家知道西方有一位教主叫耶穌，有一次，他的門徒忍不住問一個難題，説：「老師，你天天要我們信上帝，到底上帝在哪里？我們都沒有看見上帝，你怎麽叫我們信？」這和剛才說中庸要我們要從人的天性而行，而這個天性是天之所命，如果我們都不瞭解老天，怎么知道老天命給我們的是什麽呢？問題的意思差不多。所以這個問題很難回答，必須要很高的智慧才能解破這個難關——如果是你，你能回答嗎？耶穌果然了不起，有智慧，他答道：「你天天和我在一起，你還沒有看到上帝嗎？」（鼓掌）
 
 其實，這句話是搪塞之辭，並沒有解決真正的疑惑。他的意義就是要你「信」，而且要信「我」！這叫做宗教。所以由這句話開出了基督的宗教。但如果你是因為信耶穌信上帝而行其道，乃至於成為一個「有德者」，這種成，是從宗教的情操而成，是成為一個「宗教人」，一個「教徒」，這種成，不是自由自在的成，這好像還不是儒家所說的「有德者」。儒家所成的有德者，才是真正的成，這種成，依照孔子的意思是不要為人，只是為己，這樣的有德者才是一個自我決定自律自主自由自在為自己而活的人。（鼓掌）
 
 如何而可以是自由自在為自己而有德呢？中國文化以儒家爲核心，而儒家的教化可以説是一種「成德之教」——讓人成爲一個有德之人的教育，儒家的教育當然有相當成熟的道德理論。尤其到了孟子，他不走這從上到下的路，說「你應該信我們的人性和天道，你依照天道而行就成爲有德者」，孟子不這樣建立他的道德理論，因爲這是建立不起來的。孟子對於人的「道德性」───道德的根據，道德的標準的證明，走相反的路，是從下到上的，可以讓我們當下自覺自證，任何人只要一念自反，即可「挺立人德，上通天德」。因為孟子告訴我們，道德的根源是在你的眼前，在你的心中，你自己當下就知道應該怎麽做，每個人都按照他知道的去做，天道天德就在這裏，人心即是天心，人道即是天道。
+
+## 性善論
 
 我們都知道孟子的人性論是很特別的，是所謂「性善論」。但孟子怎麽證明人之性善呢？其證明合理不合理呢？我認為我們如果對孟子論性的原典有真切的了解，就知道「性善」是不可以反駁的，人性就是善，沒有別的說法。
 
@@ -42,11 +48,9 @@
 
 孟子當然知道一般人會質疑：怎麽可以肯定人性是善的呢？若從人性還沒發出來時看，你怎麽知道他以後是善人還是惡人呢？若從人性已發出來的結果看，人生的表現有那麽多種，惡人一大堆，所以你怎麽可以堅持說人性是善的呢？這些質疑當然都是有根據的，也是相當合理的，是不能反駁的。所以孟子不從這些「現實的」地方說話。他是從「超越的」、「原本的」意義上看問題，說：「乃若其情，則可以爲善矣。」。「若」者順也，「情」者實也。意思是：如果一個人順著他生命的實際情况，「則可以爲善矣」，那麽他是可以做一個善人的，「乃所謂善也」，這是我説的「性善」的意思。而「若夫為不善，非才之罪也」。若，如果，如果一個人居然成爲不善的人，「非才之罪也」，這個「才」字這麽冩，（比劃），其實最後那一撇，原來是一點，就是一橫一豎，中間畫一點，叫做才，是個象形字。中間的一點是一粒種子，往下生根，往上發芽，超過土地，這叫做「才」。所以「才」是「剛剛發生的事」，「原來」的意思。也就是説，假如一個人爲不善，并不是他原來的本意，即不是他的本性就有的過錯。所以孟子並沒有一口咬定人間沒有惡人，孟子乃是説，「如果一個人能够順著他真實的本性而行，他應該是善的；只是他違反了自己的本性，所以才成爲一個不善的人。」
 
-這樣的理論可靠嗎？如果你還不能了悟，孟子又提了一些事例來證明。其實一個理論的建立就這麽幾句話也夠了，「乃若其情，則可以爲善矣，乃所謂善也。若夫爲不善，非才之罪也」，就完全可以建立一個性善的理論，而這個理論是天下少有，只有儒家這一家，由孟子完成。只這幾句話，我們就不得不佩服孟子偉大，孟子了不起。所以好話不用多，我今天的演講也不用講很多，假如我講的有道理，講幾句也就够了，但我還是要多講幾句，讓我們更加明白，從今天開始，這一輩子，很清楚的認識，不可再疑惑：「人性是善的」！孟子的理論不可違背，因爲他舉一個例子來證明——
+這樣的理論可靠嗎？如果你還不能了悟，孟子又提了一些事例來證明。其實一個理論的建立就這麽幾句話也夠了，「乃若其情，則可以爲善矣，乃所謂善也。若夫爲不善，非才之罪也」，就完全可以建立一個性善的理論，而這個理論是天下少有，只有儒家這一家，由孟子完成。只這幾句話，我們就不得不佩服孟子偉大，孟子了不起。所以好話不用多，我今天的演講也不用講很多，假如我講的有道理，講幾句也就够了，但我還是要多講幾句，讓我們更加明白，從今天開始，這一輩子，很清楚的認識，不可再疑惑：「人性是善的」！孟子的理論不可違背，因爲他舉一個例子來證明：所謂「今人乍見孺子將入於井，皆有怵惕惻隱之心，非所以内交於孺子之父母也，非要譽於鄉黨朋友也，非惡其聲而然也」。接下去就講，所以「無惻隱之心，非人也」，然後擴大來講，「無羞辱之心，非人也；無辭讓之心，非人也；無是非之心，非人也」。
 
-所謂「今人乍見孺子將入於井，皆有怵惕惻隱之心，非所以内交於孺子之父母也，非要譽於鄉黨朋友也，非惡其聲而然也」。接下去就講，所以「無惻隱之心，非人也」，然後擴大來講，「無羞辱之心，非人也；無辭讓之心，非人也；無是非之心，非人也」。
-
-我們把它解釋一下，「乍見孺子將入於井」，這個「乍」字重要，乍就是忽然，忽然看到一個小孩子將要掉到井裏去，「皆有怵惕惻隱之心」，這個「皆」字更重要，就是任何人一定有一種驚動不安的心理自然産生。你看，要掉到井裏的是一個孺子，而産生驚動不安的人是你，這是非常奇特的現象，而這種現象是客觀普遍的，不是一個人主觀的，或者某一個時刻才有，是必然有，時時有，人人有。不管任何時「乍見」，一切人「皆有」。這個「怵惕惻隱心」我們今天叫「同情心」，它之所以生出來，不依賴任何外界條件，而是由於你真心真情的感動。孟子說：「非所以内交於孺子之父母也，非要譽於鄉黨朋友也，非惡其聲而然也。」就是說你這種不安和觸動，不是爲了你想如果去救這個孩子，孩子的父母會感謝你；也不是爲了你計算救了這個孩子，鄰居朋友會贊賞你；當然更不是爲了倘若這個孩子掉到井里就會大哭大叫，你不喜歡聽他哭叫，所以起了一個惻隱之心，想要援助他。孟子連舉了三個「非」，從文學的修辭來講，是以少代多，其意就是「非掉」一切條件。這種並不因爲任何條件而來的真心的感動，這種真的而且帶有行動力的决定，來自于哪里呢？不來自於任何你能像到的條件，這叫「無條件」的命令，這種發出「無條件命令」的意志，叫做「自由意志」。就是你不知道從何而來，很自然的由你內在生命而産生的一個感動，一個决心，乃至于一個行動，這種感動叫做「善的感動」，這種意志叫做「善的意志」，這種行動叫做「善的行爲」。而這種善的感動的可能隨時都在，順著善之感動而行，即是德行。不只是救一個孩子要這樣做，人生的任何事情你都依照心之自覺去行，時時有此德行，即是有德的人。如果有人説：「你有善的感動，我並沒有啊，你叫我做一個有德的人，這不是我的天性啊！」也就是說：「如果我沒有感動，你就不能證明我性善哪。」如果你膽敢向孟子這樣抗議，他也沒有辦法，他只能叫你自己回去檢查檢查，只要不欺騙自己，順著自己的真情而發，必能自已證明是有的，所以做個有德者是自己承認，自己願意的，不是誰來設定的，誰來逼迫的，這叫做「逆覺體證」。人人要反回去自己的心，自己去體貼證實，有就是有，沒有就是沒有，這不是靠辯論辯來的。這自明的心裏的感動，孟子稱為「端」，是我們道德本性的「發現處」，惻隱、羞惡、辭讓、是非，四種自覺，孟子稱為「四端之心」。何以會有這四端的呈現？如果要進一步追溯這些自覺的來源，會發現這它來源于我們生命內在很深的地方，我們只能自然地覺察這樣做是對的，卻不知道它的來由，只能說從天而來，可以說這就是人的「性」。孟子就這樣由善的「心」之自覺，來證明人的本「性」是善的。說到這裏，如果你還死硬堅持自己並沒有感動怎麽辦？沒關係，沒有人能強迫你去做道德的事。比如我們面對父母子女兄弟朋友，一點感動也沒有。又比如有些人説我是商人，我必須爲惡，才可以賺到錢，我這樣做不認爲自己是錯的，內心也不會覺得痛苦，那怎麽辦？孟子只能説，這種人「非人也，是禽獸也」。（鼓掌，笑）。所以你不要死鴨子嘴硬了，你心底一直明明白白知道自己應該怎麼做人！一切不如此者，都是自欺欺人！
+我們把它解釋一下，「乍見孺子將入於井」，這個「乍」字重要，乍就是忽然，忽然看到一個小孩子將要掉到井裏去，「皆有怵惕惻隱之心」，這個「皆」字更重要，就是任何人一定有一種驚動不安的心理自然産生。你看，要掉到井裏的是一個孺子，而産生驚動不安的人是你，這是非常奇特的現象，而這種現象是客觀普遍的，不是一個人主觀的，或者某一個時刻才有，是必然有，時時有，人人有。不管任何時「乍見」，一切人「皆有」。這個「怵惕惻隱心」我們今天叫「同情心」，它之所以生出來，不依賴任何外界條件，而是由於你真心真情的感動。孟子說：「非所以内交於孺子之父母也，非要譽於鄉黨朋友也，非惡其聲而然也。」就是說你這種不安和觸動，不是爲了你想如果去救這個孩子，孩子的父母會感謝你；也不是爲了你計算救了這個孩子，鄰居朋友會贊賞你；當然更不是爲了倘若這個孩子掉到井里就會大哭大叫，你不喜歡聽他哭叫，所以起了一個惻隱之心，想要援助他。孟子連舉了三個「非」，從文學的修辭來講，是以少代多，其意就是「非掉」一切條件。這種並不因爲任何條件而來的真心的感動，這種真的而且帶有行動力的决定，來自于哪里呢？不來自於任何你能想像到的條件，這叫「無條件」的命令，這種發出「無條件命令」的意志，叫做「自由意志」。就是你不知道從何而來，很自然的由你內在生命而産生的一個感動，一個决心，乃至于一個行動，這種感動叫做「善的感動」，這種意志叫做「善的意志」，這種行動叫做「善的行爲」。而這種善的感動的可能隨時都在，順著善之感動而行，即是德行。不只是救一個孩子要這樣做，人生的任何事情你都依照心之自覺去行，時時有此德行，即是有德的人。如果有人説：「你有善的感動，我並沒有啊，你叫我做一個有德的人，這不是我的天性啊！」也就是說：「如果我沒有感動，你就不能證明我性善哪。」如果你膽敢向孟子這樣抗議，他也沒有辦法，他只能叫你自己回去檢查檢查，只要不欺騙自己，順著自己的真情而發，必能自已證明是有的，所以做個有德者是自己承認，自己願意的，不是誰來設定的，誰來逼迫的，這叫做「逆覺體證」。人人要反回去自己的心，自己去體貼證實，有就是有，沒有就是沒有，這不是靠辯論辯來的。這自明的心裏的感動，孟子稱為「端」，是我們道德本性的「發現處」，惻隱、羞惡、辭讓、是非，四種自覺，孟子稱為「四端之心」。何以會有這四端的呈現？如果要進一步追溯這些自覺的來源，會發現這它來源于我們生命內在很深的地方，我們只能自然地覺察這樣做是對的，卻不知道它的來由，只能說從天而來，可以說這就是人的「性」。孟子就這樣由善的「心」之自覺，來證明人的本「性」是善的。說到這裏，如果你還死硬堅持自己並沒有感動怎麽辦？沒關係，沒有人能強迫你去做道德的事。比如我們面對父母子女兄弟朋友，一點感動也沒有。又比如有些人説我是商人，我必須爲惡，才可以賺到錢，我這樣做不認爲自己是錯的，內心也不會覺得痛苦，那怎麽辦？孟子只能説，這種人「非人也，是禽獸也」。（鼓掌，笑）。所以你不要死鴨子嘴硬了，你心底一直明明白白知道自己應該怎麼做人！一切不如此者，都是自欺欺人！
 
 不過有很多人都好像真的不知道怎麽做人，他渾渾噩噩怎麽辦，孟子又這樣舉例，說，一個人，在清晨剛醒來的時候，他還沒有想到很多俗務的時候，心裏是十分清靜的，這叫「平旦之氣」，這個平旦之氣中，有一種清明的感覺，是很近乎人的本性的。但是等到他一醒來，面對他的生活環境，以前的習慣又來了，于是就開始爲自己的私利而考量，他明知道自私是不對的，傷害人是不對的，但是他藉口「人在江湖身不由己」，所以他就改不過來了。就好像山上的樹木，本來長得很茂盛，但是被人用斧頭一回砍兩回砍，只剩下樹根，不過這個樹根還是有生命力的，還是會長，長出一些芽來，可是又有人帯著一群牛羊，又把這些新芽給啃掉了。這樣又砍又啃，久而久之，這座山就真的沒有樹了，於是有人説，這座山本來就長不出樹的。是這樣嗎？不是！人類的善心是隨時要發的，你讓他好好的發出來，你就成爲有德者，只要不天天去砍它啃它！所以要做一個有德者，是那麽樣的親切自然，不需要外求，所謂「求則得之，舍則失之」，有求就有，沒有求就沒有，「是求有益于得也」。至于名利富貴呢，名利富貴是「求之有道，得之有命」，雖然你按照一定規律去求升官發財，是「求之在外者也」，所求是外在的東西，這種求「是求無益得也」，你求不一定有所得。所以要做一個富貴的人，尤其是心靈富貴的人，就求自己吧，不要外求了，外求往往是求不到的。求自己做一個有德的人，是任何人都能做到的，不僅能做到，一個有智慧的人是立刻可以得到，誰想要做一個有德者，是一轉念之間，一秒鍾，就可以脫胎換骨。只是，你願意嗎？
 
@@ -88,6 +92,8 @@
 這種教育的理論，不同于西方的知識教育，但它也是必要的。一個有良知的人，一個有德者，一個有智慧者，他既知道科學是必須的，學西方是應該的，也知道中國的文化是有智慧的，也是應該學的。總之，世界上只要有任何一種文化，任何一個系統，任何一個人物，可以供我們效仿，提升我們的道德品質，我們都應該去學習。如果一個人有這樣清明的頭腦，有公正的心態，開放的心胸，那麽古代和現代是不會衝突的，東方和西方是可以合作的，我們的世界將來是可以大同的！（鼓掌）
 
 從自己的良知而行，你會發現，正合乎聖人之道，你親近經典，讓聖賢來啓發你，正好啓發的是自己的良知，這個叫做「古人先得我心之妙」，這樣你才能「學而時習之，不亦説乎」，中國文化如果具有這樣的特質，它所講的是我們的良知和人性，那麽中國文化就是永恒的。我們要發揚這永恒的文化，不僅是爲了民族祖先，也是爲了我們自己。所以我們要把發揚中國文化作爲自己的責任，這個責任不是重擔，乃是你意喜悅的，如果你是满心的喜悅，那麽你就是個有德者，你成爲有德者，就越發的發現中國文化的偉大！（鼓掌）
+
+## 結語
 
 你成爲一個有德者，你將會感覺到人間是幸福的，要做一個人是簡單的，因爲你只要勤懇而行，勤懇而行就可以繼續走下去，所以前途是遠大而光明的，假如這點信不住，我告訴各位，你還是依照一般現實的追求過活去吧，你不知人身難得，不知天地廣大，只是小里小氣，天天只知斤斤計較，一生和人鬥爭傾軋，到最後兩敗俱傷，通通與草木同朽！有人說做個君子會被人欺負，我就這樣子比喻，這裏有一瓶水，你滴下一滴墨汁，這瓶水就不能喝了，如果是一個池塘，你滴一滴墨汁下去，好像沒有什麽妨礙，如果是一個大海，就是用一車的墨水倒下去，也不會對它有任何影響。所以你怕做君子會被人欺負，你其實就不是一個君子，你還是一個小裏小氣的人，一個大方的人怎麽會怕被欺負呢？（鼓掌）
 孔子被欺負了嗎？是的，有人百般欺負孔子。孔子傷心嗎？他沒有傷心。他被欺負以後，他又回來了。所以我告訴各位，孔子回來了，孟子回來了，老子莊子回來了，杜甫李白又回來了！（鼓掌）希望我們迎接他們，希望我們以他們爲我們的老師，爲我們的朋友！讓我們大家都在傳統文化的教養中完成自我，成為一個有德者，謝謝各位！（鼓掌）
